# maia_app

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/maia_app_backend/: Cargo.toml  maia_app_backend.did
src/maia_app_backend/src/: lib.rs  outcalls.rs
src/maia_app_frontend/: package.json
src/maia_app_frontend/public/: human.glb
src/maia_app_frontend/src/: App.jsx  main.jsx
src/maia_app_frontend/src/app/: App.css  App.jsx
src/maia_app_frontend/src/brain/: BrainOptionList.jsx  BrainTumorDiagnose.jsx
src/maia_app_frontend/src/chest/: ChestCTDiagnose.jsx  ChestDiseaseDiagnose.jsx  ChestOptionList.jsx
src/maia_app_frontend/src/content/: Content.jsx  HumanModel.jsx
src/maia_app_frontend/src/gemini/: GeminiApi.jsx
src/maia_app_frontend/src/kidney/: KidneyCTDiagnose.jsx  KidneyCTOptionList.jsx
src/maia_app_frontend/src/landing/: Landing.jsx  MAIALandingPage.css
src/maia_app_frontend/src/skin/: SkinCancerDiagnose.jsx  SkinCancerOptionList.jsx
